CRUD de usuário FINALIZADO

--- a/public/dash/conta.html
+++ b/public/dash/conta.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/conta.css" />
     <title>Usuários - INSIGNA</title>
 </head>
@@ -57,12 +58,18 @@
                     <div class="conteudo-painel">
 
                         <table id="tabela" class="tabela">
-                            <tr>
-                                <th>Nome</th>
-                                <th>Departamento</th>
-                                <th>E-mail</th>
-                                <th>Senha</th>
-                            </tr>
+                            
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Nome</th>
+                                    <th>Departamento</th>
+                                    <th>E-mail</th>
+                                    <th>Senha</th>
+                                    <th>Editar</th>
+                                    <th>Remover</th>
+                                </tr>
+                            </thead>
                             
                             <tbody>
 
