Alteração nos nomes de arquivos, ajustes na API

--- a/public/dash/cadastroInvestigadores.html
+++ b/public/dash/cadastroInvestigadores.html
@@ -25,8 +25,8 @@
       <br />
       <div class="outros">
         <h4>OUTROS</h4>
+        <a href="/dash/usuarios.html"><img src="../assets/conta-icon.png">Usuários</a>
         <a href="../index.html"><img src="../assets/home.png" />Home</a>
-        <a><img src="../assets/conta-icon.png" />Conta</a>
       </div>
     </div>
   </div>
@@ -63,9 +63,9 @@
               <label>Nome:</label><br>
               <input type="text" class="ipt" id="ipt_nomeIv"><br>
               <label>Departamento:</label><br>
-              <input type="tel" class="ipt" id=""><br>
+              <input type="text" class="ipt" id=""><br>
               <label>E-mail:</label><br>
-              <input type="number" class="ipt" id="ipt_emailIv"><br>
+              <input type="text" class="ipt" id="ipt_emailIv"><br>
             </div>
           
             <div class="input2">
