--- a/public/dash/cadastroOperacoes.html
+++ b/public/dash/cadastroOperacoes.html
@@ -27,8 +27,8 @@
       <br />
       <div class="outros">
         <h4>OUTROS</h4>
+        <a href="/dash/usuarios.html"><img src="../assets/conta-icon.png">Usuários</a>
         <a href="../index.html"><img src="../assets/home.png" />Home</a>
-        <a><img src="../assets/conta-icon.png" />Conta</a>
       </div>
     </div>
   </div>
