--- a/public/dash/usuarios.html
+++ b/public/dash/usuarios.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/conta.css" />
+    <link rel="stylesheet" href="../css/usuarios.css" />
     <title>Usuários - INSIGNA</title>
 </head>
 
@@ -28,8 +28,8 @@
             <br />
             <div class="outros">
                 <h4>OUTROS</h4>
+                <a href="/dash/usuarios.html"><img src="../assets/conta-icon.png">Usuários</a>
                 <a href="../index.html"><img src="../assets/home.png" />Home</a>
-                <a><img src="../assets/conta-icon.png" />Conta</a>
             </div>
         </div>
     </div>
@@ -84,7 +84,7 @@
 
         </div>
     </div>
-    <script src="../js/conta.js"></script>
+    <script src="../js/usuarios.js"></script>
 </body>
 
 </html>
