Ajuste na rota de departamentos

--- a/public/cadastroDep.html
+++ b/public/cadastroDep.html
@@ -85,7 +85,7 @@
       } 
   
       // Enviando o valor da nova input
-      fetch("/usuarios/cadastrarDep", {
+      fetch("/departamentos/cadastrarDep", {
         method: "POST",
         headers: {
           "Content-Type": "application/json",
