CRUD de Departamentos FINALIZADO

--- a/public/dash/dashboardCarga.html
+++ b/public/dash/dashboardCarga.html
@@ -25,7 +25,8 @@
                 <a href="./dashboardOutros.html"><img src="../assets/grafico-icon.png">Dashboard</a>
                 <a href="./cadastroOperacoes.html"><img src="../assets/operacoes.png">Cadastro de Operações</a>
                 <a href="./cadastroInvestigadores.html"><img src="../assets/user-icon.png">Cadastro de Investigador</a>
-                <a><img src="../assets/aceitarOp.png">Aceitar Operações</a>
+                <a href="operacoes.html"><img src="../assets/aceitarOp.png" />Operações</a>
+                <a href="departamentos.html">Departamentos</a>
             </div>
             <br>
             <br>
