--- a/public/dash/cadastroOperacoes.html
+++ b/public/dash/cadastroOperacoes.html
@@ -20,17 +20,17 @@
         <h4>MENU</h4>
         <a href="./dashboardOutros.html"><img src="../assets/grafico-icon.png" />Dashboard</a>
         <a href="cadastroOperacoes.html"><img src="../assets/operacoes.png" />Cadastro de Operações</a>
-        <a href="cadastroInvestigadores.html"><img src="../assets/user-icon.png" />Cadastro de Investigador</a>
+        <a href="cadastroInvestigadores.html" class="btn-dl"><img src="../assets/user-icon.png" />Cadastro de Investigador</a>
         <a href="operacoes.html"><img src="../assets/aceitarOp.png" />Operações</a>
-        <a href="departamentos.html">Departamentos</a>
-      </div>
-      <br />
-      <br />
-      <div class="outros">
+        <a href="departamentos.html" class="btn-dl">Departamentos</a>
+    </div>
+    <br />
+    <br />
+    <div class="outros">
         <h4>OUTROS</h4>
-        <a href="/dash/usuarios.html"><img src="../assets/conta-icon.png">Usuários</a>
+        <a href="/dash/usuarios.html" class="btn-dl"><img src="../assets/conta-icon.png">Usuários</a>
         <a href="../index.html"><img src="../assets/home.png" />Home</a>
-      </div>
+    </div>
     </div>
   </div>
 
