Ajuste nos ícones e edição de departamento

--- a/public/dash/cadastroInvestigadores.html
+++ b/public/dash/cadastroInvestigadores.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/cadatroInvestigadores.css">
+    <link rel="icon" href="/assets/LogoSoDistintivo.png" />
     <title>Cadastro De Investigadores - INSIGNA</title>
 </head>
 <body>
