--- a/public/dash/dashboardOutros.html
+++ b/public/dash/dashboardOutros.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/dashboard.css">
-    <link rel="icon" href="/assets/LogoSoDistintivo.png" />
+    <link rel="icon" href="/assets/LogoSoDistintivo.png">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>Dashboard - INSIGNA</title>
 </head>
