--- a/public/dash/edicaoDepartamento.html
+++ b/public/dash/edicaoDepartamento.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/edicaoUsuario.css">
+    <link rel="icon" href="/assets/LogoSoDistintivo.png" />
     <title>Departamentos - INSIGNA</title>
 </head>
 <body>
@@ -65,9 +66,9 @@
                             Nome: <input type="text" id="ipt_nomeAtualizado">
                             CEP: <input type="number" id="ipt_cepAtualizado">
                             Logradouro: <input type="text" id="ipt_logradouroAtualizado">
-                            Número: <input type="date" id="ipt_numeroAtualizado">
-                            Bairro: <textarea id="ipt_bairroAtualizado"></textarea>
-                            Cidade: <textarea id="ipt_cidadeAtualizado"></textarea>
+                            Número: <input type="number" id="ipt_numeroAtualizado">
+                            Bairro: <input type="text" id="ipt_bairroAtualizado">
+                            Cidade: <input type="text" id="ipt_cidadeAtualizado">
 
                         </div>
 
