--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/index.css">
-    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
-    <title>Site Institucional</title>
+    <link rel="icon" href="/assets/LogoSoDistintivo.png" />
+    <title>Site Institucional - INSIGNA</title>
 </head>
 
 <body>
