--- a/public/cadastroDep.html
+++ b/public/cadastroDep.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/cadastroDep.css" />
     <link rel="icon" href="/assets/LogoSoDistintivo.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <title>Departamento</title>
+    <title>Cadastro de Departamento - INSIGNA</title>
 </head>
 
 <body>
