--- a/public/dash/cadastroOperacoes.html
+++ b/public/dash/cadastroOperacoes.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../css/cadastroOperacao.css" />
+  <link rel="stylesheet" href="../css/cadastroOperacao.css">
+  <link rel="icon" href="/assets/LogoSoDistintivo.png" />
   <title>Cadastro De Operações - INSIGNA</title>
 </head>
 
