--- a/public/dash/edicaoOperacao.html
+++ b/public/dash/edicaoOperacao.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/edicaoUsuario.css">
+    <link rel="icon" href="/assets/LogoSoDistintivo.png" />
     <title>Edição de Usuário - INSIGNA</title>
 </head>
 
