--- a/public/dash/operacoes.html
+++ b/public/dash/operacoes.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/operacoes.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link rel="icon" href="/assets/LogoSoDistintivo.png" />
     <title>Operações - INSIGNA</title>
 </head>
 <body>
