--- a/public/dash/dashboardCargaCentro.html
+++ b/public/dash/dashboardCargaCentro.html
@@ -10,7 +10,7 @@
     <title>Dashboard - INSIGNA</title>
 </head>
 
-<body onload="roubosMesCarga(), roubosAnoCarga(), regiao(), grafico()">
+<body onload="roubosMesCargaCentro(), roubosAnoCargaCentro(), regiao(), graficoCentro()">
 
     <div class="menu-lateral">
         <div class="container-menu">
@@ -74,8 +74,8 @@
 
                         <div class="selecionar">
                             <select class="select_filtro" id="regiao" onchange="trocarRegiao()">
-                                <option value="geral">Geral</option>
                                 <option value="centro">Centro</option>
+                                <option value="geral">Geral</option>
                                 <option value="norte">Zona Norte</option>
                                 <option value="leste">Zona Leste</option>
                                 <option value="sul">Zona Sul</option>
@@ -143,7 +143,7 @@
 
 
     </div>
-    <script src="../js/dashboardCarga.js"></script>
+    <script src="../js/dashboardCargaCentro.js"></script>
 </body>
 
 </html>
