--- a/public/dash/dashboardCargaOeste.html
+++ b/public/dash/dashboardCargaOeste.html
@@ -10,7 +10,7 @@
     <title>Dashboard - INSIGNA</title>
 </head>
 
-<body onload="roubosMesCarga(), roubosAnoCarga(), regiao(), grafico()">
+<body onload="roubosMesCargaOeste(), roubosAnoCargaOeste(), regiao(), graficoOeste()">
 
     <div class="menu-lateral">
         <div class="container-menu">
@@ -74,12 +74,12 @@
 
                         <div class="selecionar">
                             <select class="select_filtro" id="regiao" onchange="trocarRegiao()">
+                                <option value="oeste">Zona Oeste</option>
                                 <option value="geral">Geral</option>
                                 <option value="centro">Centro</option>
                                 <option value="norte">Zona Norte</option>
                                 <option value="leste">Zona Leste</option>
                                 <option value="sul">Zona Sul</option>
-                                <option value="oeste">Zona Oeste</option>
                             </select>
                         </div>
 
@@ -143,7 +143,7 @@
 
 
     </div>
-    <script src="../js/dashboardCarga.js"></script>
+    <script src="../js/dashboardCargaOeste.js"></script>
 </body>
 
 </html>
