DASHBOARD ZONAS ROUBOS - OUTROS E ROUBO - VEICULO FINALIZADOS

--- a/public/dash/dashboardOutrosNorte.html
+++ b/public/dash/dashboardOutrosNorte.html
@@ -10,7 +10,7 @@
     <title>Dashboard - INSIGNA</title>
 </head>
 
-<body onload="roubosMesOutrosNorte(), roubosAnoOutrosNorte(), regiaoOutrosNorte(), graficoOutrosNorte()">
+<body onload="roubosMesOutrosNorte(), roubosAnoOutrosNorte(), regiaoOutros(), graficoOutrosNorte()">
 
     <div class="menu-lateral">
         <div class="container-menu">
