arrumando front da página da ia

--- a/public/dash/cadastroInvestigadores.html
+++ b/public/dash/cadastroInvestigadores.html
@@ -21,6 +21,7 @@
         <a href="cadastroInvestigadores.html"><img src="../assets/user-icon.png" />Cadastro de Investigador</a>
         <a href="operacoes.html"><img src="../assets/aceitarOp.png" />Operações</a>
         <a href="departamentos.html">Departamentos</a>
+        <a href="recomendacoesIA.html">Recomendações IA</a>
       </div>
       <br />
       <br />
