--- a/public/dash/recomendacoesIA.html
+++ b/public/dash/recomendacoesIA.html
@@ -22,6 +22,7 @@
                 <a href="cadastroInvestigadores.html"><img src="../assets/user-icon.png" />Cadastro de Investigador</a>
                 <a href="operacoes.html"><img src="../assets/aceitarOp.png" />Operações</a>
                 <a href="departamentos.html">Departamentos</a>
+                <a href="recomendacoesIA.html">Recomendações IA</a>
             </div>
             <br />
             <br />
@@ -55,30 +56,30 @@
                     <h1>Recomendações - IA</h1>
                     <br>
                     <br>
-                    <h3>Selecione uma pergunta:</h3>
+                    <h2>Selecione uma pergunta:</h2>
                 </div>
                 
-                <div class="indicadores_geral">
-                    <div class="secao_kpi_geral">
+                <div class="perguntas_geral">
+                    <div class="secao_pergunta_geral">
                         <div class="caixa_geral">
-                            <div class="kpi_geral" onclick="pergunta1()">
-                                <p id="dadosKPI1">Analisando a área/zona com mais roubos ou seja a mais perigosa, qual o crime que está em constante crescimento nela?</p>
+                            <div class="pergunta_geral" onclick="pergunta1()">
+                                <p>Analisando a área/zona com mais roubos ou seja a mais perigosa, qual o crime que está em constante crescimento nela?</p>
                             </div>
                         </div>
                     </div>
 
-                    <div class="secao_kpi_geral" onclick="pergunta2()">
+                    <div class="secao_pergunta_geral" onclick="pergunta2()">
                         <div class="caixa_geral">
-                            <div class="kpi_geral">
-                                <p id="dadosKPI2">Analisando o ano e o mês com mais roubos e crimes, qual seria o mês mais perigoso para assim poder aumentar as operações para que ele possa diminuir?</p>
+                            <div class="pergunta_geral">
+                                <p>Analisando o ano e o mês com mais roubos e crimes, qual seria o mês mais perigoso para assim poder aumentar as operações para que ele possa diminuir?</p>
                             </div>
                         </div>
                     </div>
     
-                    <div class="secao_kpi_geral" onclick="pergunta3()">
+                    <div class="secao_pergunta_geral" onclick="pergunta3()">
                         <div class="caixa_geral">
-                            <div class="kpi_geral">
-                                <p id="dadosKPI3">Visando os roubos de veículos e de carga, em qual área/zona de São Paulo eles são muito comum?</p>
+                            <div class="pergunta_geral">
+                                <p>Visando os roubos de veículos e de carga, em qual área/zona de São Paulo eles são muito comum?</p>
                             </div>
                         </div>
                     </div>
