implementando front da ia

--- a/public/dash/dashboardVeiculo.html
+++ b/public/dash/dashboardVeiculo.html
@@ -28,6 +28,7 @@
                 <a href="cadastroInvestigadores.html" class="btn-dl"><img src="../assets/user-icon.png" />Cadastro de Investigador</a>
                 <a href="operacoes.html"><img src="../assets/aceitarOp.png" />Operações</a>
                 <a href="departamentos.html" class="btn-dl">Departamentos</a>
+                <a href="recomendacoesIA.html" class="btn-dl">Recomendações IA</a>
             </div>
             <br />
             <br />
