Adicionando icones e textos dos filtros da dashboard

--- a/public/cadastroDep.html
+++ b/public/cadastroDep.html
@@ -41,7 +41,7 @@
 
                         <div class="form2">
                             <input type="text" placeholder="CEP" id="ipt_cep" />
-                            <input type="text" placeholder="Número" id="ipt_numero" />
+                            <input type="number" placeholder="Número" id="ipt_numero" />
                             <input type="text" placeholder="Bairro" id="ipt_bairro" />
                         </div>
                     </div>
