--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
                     <img src="./assets/mdi_arrow-right.png" alt="">
                 </li>
                 <li class="cadastro">
-                    <a href="./cadastroDep.html"> Cadastrar-se </a>
+                    <a href="./cadastro.html"> Cadastrar-se </a>
                     <img src="./assets/symbole-fleche-droite-grise.png" alt="">
                 </li>
             </ul>
