Ajustando permissões de delegado

--- a/public/cadastroDep.html
+++ b/public/cadastroDep.html
@@ -107,7 +107,7 @@
           if (resposta.ok) {
             alert("Cadastrado com sucesso!");
             setTimeout(() => {
-              window.location = "cadastro.html";
+              window.location = "./dash/departamentos.html";
             }, "1000");
           } else {
             throw "Houve um erro ao tentar realizar o cadastro!";
