--- a/public/dash/dashboardVeiculo.html
+++ b/public/dash/dashboardVeiculo.html
@@ -24,9 +24,9 @@
             <div class="menu">
                 <h4>MENU</h4>
                 <a href="./dashboardOutros.html"><img src="../assets/grafico-icon.png" />Dashboard</a>
-                <a href="cadastroOperacoes.html"><img src="../assets/operacoes.png" />Cadastro de Operações</a>
+                <a href="cadastroOperacoes.html" class="btn-iv"><img src="../assets/operacoes.png" />Cadastro de Operações</a>
                 <a href="cadastroInvestigadores.html" class="btn-dl"><img src="../assets/user-icon.png" />Cadastro de Investigador</a>
-                <a href="cadas.html" class="btn-dl"><img src="../assets/adicionarDep.png">Cadastro de Departamento</a>
+                <a href="../cadastroDep.html" class="btn-dl"><img src="../assets/adicionarDep.png">Cadastro de Departamento</a>
                 <a href="recomendacoesIA.html"><img src="../assets/gemini.jpg">Recomendações IA</a>
             </div>
             <br />
