--- a/public/dash/recomendacoesIA.html
+++ b/public/dash/recomendacoesIA.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/recomendacoesIA.css" />
+    <link rel="icon" href="/assets/LogoSoDistintivo.png" />
     <title>IA - INSIGNA</title>
 </head>
 <body>
@@ -18,9 +19,9 @@
             <div class="menu">
                 <h4>MENU</h4>
                 <a href="./dashboardOutros.html"><img src="../assets/grafico-icon.png" />Dashboard</a>
-                <a href="cadastroOperacoes.html"><img src="../assets/operacoes.png" />Cadastro de Operações</a>
+                <a href="cadastroOperacoes.html" class="btn-iv"><img src="../assets/operacoes.png" />Cadastro de Operações</a>
                 <a href="cadastroInvestigadores.html" class="btn-dl"><img src="../assets/user-icon.png" />Cadastro de Investigador</a>
-                <a href="cadas.html" class="btn-dl"><img src="../assets/adicionarDep.png">Cadastro de Departamento</a>
+                <a href="../cadastroDep.html" class="btn-dl"><img src="../assets/adicionarDep.png">Cadastro de Departamento</a>
                 <a href="recomendacoesIA.html"><img src="../assets/gemini.jpg">Recomendações IA</a>
             </div>
             <br />
