--- a/public/dash/edicaoDepartamento.html
+++ b/public/dash/edicaoDepartamento.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/edicaoUsuario.css">
+    <link rel="stylesheet" href="../css/edicaoDep.css">
     <link rel="icon" href="/assets/LogoSoDistintivo.png" />
     <title>Departamentos - INSIGNA</title>
 </head>
