Alterações nos arquivos CSS - ajustando transição do hover

--- a/public/dash/edicaoOperacao.html
+++ b/public/dash/edicaoOperacao.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/edicaoUsuario.css">
+    <link rel="stylesheet" href="../css/edicaoOperacao.css">
     <link rel="icon" href="/assets/LogoSoDistintivo.png" />
     <title>Edição de Usuário - INSIGNA</title>
 </head>
@@ -69,7 +69,7 @@
                             Quantidade de Policiais: <input type="number" id="ipt_qtdPoliciaisAtualizado">
                             Local: <input type="text" id="ipt_localAtualizado">
                             Data: <input type="date" id="ipt_dataAtualizado">
-                            Descrição: <textarea id="ipt_descricaoAtualizado"></textarea>
+                            Descrição: <textarea id="ipt_descricaoAtualizado" class="descricao"></textarea>
 
                         </div>
 
