Ajuste no filtro da lista de operações

--- a/public/dash/operacoes.html
+++ b/public/dash/operacoes.html
@@ -61,6 +61,7 @@
                         <div class="div_filtro">
                             Status de operação:
                             <select class="filtro" id="filtro_status" onchange="listarPorStatus()">
+                                <option value="#">Todas</option>
                                 <option value="PENDENTE">Pendente</option>
                                 <option value="ACEITA">Aceito</option>
                                 <option value="RECUSADA">Negado</option>
