--- a/public/cadastroDep.html
+++ b/public/cadastroDep.html
@@ -15,15 +15,13 @@
     <div class="box-principal">
         <div class="container-cadastro">
             <div class="nav-novo">
-                <div class="login">
-                    <a href="./login.html">LOGIN</a>
-                </div>
 
                 <div class="home">
-                    <a href="./index.html">HOME</a>
+                    <a href="./dash/dashboardCarga.html">VOLTAR</a>
                     <img src="./assets/flecha.png" />
                 </div>
-            </div>
+            
+              </div>
 
             <div class="info">
                 <div class="box-login">
