--- a/public/dash/dashboardVeiculoOeste.html
+++ b/public/dash/dashboardVeiculoOeste.html
@@ -58,7 +58,7 @@
             <div class="conteudo-painel">
 
                 <div class="cabecalho">
-                    <h1>Dashboard (Roubos - outros)</h1>
+                    <h1>Dashboard (Veículo)</h1>
 
                     <div class="filtro">
 
